--- a/HDMI_TX/DE10_Nano_HDMI_TX.qsf
+++ b/HDMI_TX/DE10_Nano_HDMI_TX.qsf
@@ -498,4 +498,5 @@ set_global_assignment -name QIP_FILE pll/sys_pll.qip
 set_global_assignment -name QIP_FILE pll/pll_reconfig.qip
 set_global_assignment -name QIP_FILE pll/pll.qip
 set_global_assignment -name VERILOG_FILE I2C_WRITE_WDATA.v
+set_global_assignment -name VHDL_FILE HDMI_Generator.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
